--- a/style.css
+++ b/style.css
@@ -14,5 +14,96 @@ body {
 }
  
 nav {
-    padding: 10px 120px;
+    padding: 20px 260px;
+}
+
+nav header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .left_side {
+    display: flex;
+    align-items: center;
+}
+
+nav .left_side .nav_links {
+    display: flex;
+    align-items: center;
+}
+
+.logo .logo-img {
+    margin-right: 30px;
+}
+
+.nav_links a {
+    padding: 0 15px;
+    color: #555;
+}
+
+.right_side .nav_buttons {
+    display: flex;
+    align-items: center;
+}
+
+.right_side .nav_buttons a {
+    padding: 6px 12px;
+    margin: 0 2px;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    border-radius: 6px;
+    font-weight: 500;
+}
+
+/*home section styles*/
+
+section {
+    padding: 60px 300px;
+}
+
+.main_home {
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main_home header {
+    text-align: center;
+}
+
+.main_home h1 {
+    font-size: 3rem;
+    border: red;
+}
+
+.main_home p {
+    font-size: 1.3rem;
+    color: #555;
+    margin-top: 20px;
+    line-height: 1.5;
+}
+
+.main_home-button {
+    margin-top: 30px;
+}
+
+.main_home-button button {
+    padding: 16px 40px;
+    border-radius: 100px;
+    border: none;
+    outline: none;
+    background-color: #101010;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+.main_home-button button:nth-child(2) {
+    background-color: #fff;
+    color: #101010;
+    border: 1px solid #ddd;
 }
